--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "axios": "^0.27.2",
+    "cors": "^2.8.5",
     "font-awesome": "^4.7.0",
     "next": "^12.2.2",
     "react": "18.2.0",
