--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,10 @@
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
-    "react-router-bootstrap": "^0.26.1"
+    "react-router-bootstrap": "^0.26.1",
+    "redux": "^4.2.0",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.1"
   },
   "devDependencies": {
     "eslint": "8.19.0",
