--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-bootstrap": "^2.4.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-paypal-button-v2": "^2.6.3",
     "react-redux": "^8.0.2",
     "react-router-bootstrap": "^0.26.1",
     "redux": "^4.2.0",
